# FormatBenchmarks

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  cloudbuild-mirror.yaml  deploy-gcp.sh  docker-compose.yml
.github/workflows/: github-ci.yml
docs/: index.html  styles.css
go-benchmarks/: build.sh  go.mod  go.sum  main.go
go-benchmarks/benchmarks/: avro_benchmark.go  benchmark.go  bson_benchmark.go  capnproto_benchmark.go  flatbuffers_benchmark.go  json_benchmark.go  msgpack_benchmark.go  protobuf_benchmark.go  runner.go
go-benchmarks/models/: message.go  testdata.go
go-benchmarks/schemas/: message.avsc  message.capnp  message.fbs  message.proto
java-benchmarks/: pom.xml
python-benchmarks/: compile_schemas.py  main.py  requirements.txt
python-benchmarks/benchmarks/: __init__.py  avro_benchmark.py  base_benchmark.py  bson_benchmark.py  capnproto_benchmark.py  flatbuffers_benchmark.py  json_benchmark.py  msgpack_benchmark.py  protobuf_benchmark.py  runner.py
python-benchmarks/models/: __init__.py  test_data.py
python-benchmarks/schemas/: message.avsc  message.capnp  message.fbs  message.proto
python-benchmarks/tests/: __init__.py  test_benchmarks.py
rust-benchmarks/: Cargo.toml  README.md  build.rs  build.sh
rust-benchmarks/schemas/: message.capnp  message.fbs
rust-benchmarks/src/: main.rs
test-data/: README.md  bench_gcp_100k-it_1k-wit_go_SML.csv  bench_gcp_100k-it_1k-wit_java_SML.csv  bench_gcp_100k-it_1k-wit_python_SML.csv  bench_gcp_100k-it_1k-wit_rust_SML.csv
web-app/: FormatBenchmarks.sln
(+11 files in other folders)
