[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
apache-avro = { version = "0.17", features = ["snappy"] }
bson = "2.15"
capnp = "0.19"
flatbuffers = "24.3.25"
flate2 = "1.1"
prost = "0.13"
rand = "0.8"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"
chrono = { version = "0.4", features = ["clock"] }

[build-dependencies]
capnpc = "0.19"
